# factory_business_ai_agent_backend

./: .gitignore  DEPLOYMENT.md  add_package.sh  deploy.sh  install_requirements.sh  main.py  pyproject.toml  requirements.txt  requirements_env.txt
agent-backend/: Dockerfile  app_real.py  deploy-agent.sh  deploy.sh  main.py  sessions.db  test-agent.sh
agent-backend/agent_factory_ai/: __init__.py  agent.py
agent-backend/cloud-run-deployment/: README.md  config.env
agent-backend/gke-deployment/: README.md
agent-backend/gke-internal-deployment/: README.md  VPN-SETUP.md  config.env
agent-factory/: acces.sh  deploy-agent.sh  main.py  requirements.txt  sessions.db  test_auth.py
agent-factory/agent_factory_ai/: agent.py
agent_live_audio_and_text/: Dockerfile  app_real.py  deploy-agent.sh  main.py
agent_live_audio_and_text/agent/: agent.py  common.py
agent_live_audio_and_text/gke-deployment/: README.md  config.env
agent_live_audio_only/: main.py  sessions.db
agent_live_audio_only/agent/: __init__.py  agent.py  common.py
cluster-setup/: README.md  config.env
cluster-setup/docs/: UPDATING-AGENT.md
cluster-setup/scripts/: 2-setup-workload-identity.sh  3-security-hardening.sh  security-audit.sh
gke-deployment/: INDEX.md  QUICKSTART.md  README.md  config.env
gke-deployment/docs/: SECURITY.md  TROUBLESHOOTING.md  YAML-GENERATION.md
gke-deployment/scripts/: 0-generate-k8s-manifests.sh  1-create-cluster.sh  3-deploy-application.sh  4-setup-iap.sh  (+1 more)
k8s/: deployment.yaml  service.yaml
map-mcp/: Dockerfile  deploy-mcp.sh  mcp-server.py  requirements.txt
(+27 files in other folders)
